# fracnetics

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  a.out  docker-compose.test.yaml  main  main.cpp  paper.bib  paper.md  pyproject.toml  test.cpp  test.py  testII.py
.github/: CONTRIBUTING.md  SUPPORT.md
.github/workflows/: tests.yml
bindings/: bindings.cpp
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  cpp_api.rst  examples.rst  index.rst  python_api.rst  sg_execution_times.rst
examples/: GALLERY_HEADER.txt  example_CartPole.ipynb  example_IRIS.ipynb  lunarlander.ipynb  mountainCar.ipynb  test.py
fracnetics/: __init__.py  utilsModel.py
fractalgenetics/: __init__.py
gui/: index.html  package-lock.json  package.json
gui/src/: App.jsx  DraggableWindow.jsx  FloatingEdge.jsx  GraphBuilder.jsx  gnpNode.jsx  graphDataHandler.jsx  index.css  test.js  utils.js
include/: Cartpole.hpp  Data.hpp  Fractal.hpp  GymnasiumWrapper.hpp  LunarLander.hpp  Network.hpp  Node.hpp  Population.hpp  PrintHelper.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
notebooks/: minExampleCartPole.ipynb  minExampleIRIS.ipynb
src/: main  main.cpp
test/: functionsPop.py  initPop.py
test.dSYM/Contents/Resources/DWARF/: test
test.dSYM/Contents/Resources/Relocations/x86_64/: test.yml
tests/: cartPoleGymnasium.py  crossover.cpp  fracneticsImport.py  functionsPop.py  initPop.py  iris.cpp  network.cpp  population.cpp  requirements.txt  testUtils.py  test_fracneticsImport.py  test_functionsPop.py  test_parallel_fitness.py
