[build-system]
requires = ["setuptools", "wheel","scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fracnetics" 
version = "0.7.11"
description = "Genetic Network Programming with Fractal Expansion"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Fabian Köhnke", email = "fabian.koehnke@googlemail.com" }]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.10.0",
]

[tool.scikit-build.sdist]
exclude = ["build", "gui", "dist", "libs", "test"]

[tool.scikit-build]
build.verbose = true
wheel.packages = ["fracnetics"]

[project.urls]
"Documentation" = "https://fracnetics.readthedocs.io/en/latest/index.html"
"Source Code" = "https://github.com/FabianKoehnke/fracnetics"

